--- a/src/fxml/Admin.fxml
+++ b/src/fxml/Admin.fxml
@@ -1,20 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
    <children>
-      <GridPane layoutX="-18.0" prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: yellow;">
+      <GridPane layoutX="-8.0" prefHeight="30.0" prefWidth="1121.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
+         <children>
+            <MenuBar prefHeight="29.0" prefWidth="1119.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Account">
+                  <items>
+                        <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <Button mnemonicParsing="false" text="Account Info" />
+                           </graphic>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <Button mnemonicParsing="false" text="Customer" />
+                           </graphic>
+                        </MenuItem>
+                    <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <Button fx:id="logout" mnemonicParsing="false" text="Sign Out" />
+                           </graphic>
+                        </MenuItem>
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </children>
+         <opaqueInsets>
+            <Insets left="15.0" right="15.0" />
+         </opaqueInsets>
       </GridPane>
-      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="666.0" prefHeight="45.0" prefWidth="1137.0">
+      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="655.0" prefHeight="45.0" prefWidth="1137.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
         </columnConstraints>
@@ -22,12 +61,37 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: red;">
+            <Pane prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: #5e5f6b;">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="569.0" layoutY="9.0" nodeOrientation="LEFT_TO_RIGHT" text="\@Copyright" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="376.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.K Platform" />
                </children>
             </Pane>
          </children>
       </GridPane>
+      <Pane layoutX="5.0" layoutY="42.0" prefHeight="578.0" prefWidth="307.0" style="-fx-background-color: yellow;">
+         <children>
+            <Label layoutX="102.0" layoutY="14.0" text="MK Restaurant " />
+            <Label layoutX="14.0" layoutY="158.0" text="Order Places" />
+            <TableView layoutX="7.0" layoutY="211.0" prefHeight="353.0" prefWidth="296.0">
+              <columns>
+                <TableColumn prefWidth="88.0" text="Order #" />
+                <TableColumn prefWidth="118.0" text="Customer Name" />
+                  <TableColumn prefWidth="89.0" text="Cust Num" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+      <TableView fx:id="productTable" layoutX="333.0" layoutY="82.0" prefHeight="535.0" prefWidth="735.0">
+        <columns>
+          <TableColumn fx:id="productID" prefWidth="128.0" resizable="false" text="Product ID" />
+          <TableColumn fx:id="productName" prefWidth="374.0" resizable="false" text="Name" />
+            <TableColumn fx:id="productQuantity" prefWidth="113.0" resizable="false" text="Quantity" />
+            <TableColumn fx:id="productPrice" prefWidth="118.0" resizable="false" text="Price" />
+        </columns>
+      </TableView>
+      <TextField fx:id="searchP" layoutX="813.0" layoutY="42.0" prefHeight="27.0" prefWidth="255.0" promptText="Search product by key" />
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
