--- a/src/style/Admin.css
+++ b/src/style/Admin.css
@@ -1,3 +1,120 @@
+
+* {
+    -fx-primarytext: #fff;
+    -fx-primarysc: #413135;
+    -fx-primarybc: #5e5f6b;
+}
+
+.table-view {
+    -fx-table-cell-border-color: transparent;
+    -fx-background-color: transparent;
+    -fx-border: none;
+}
+
+.table-view .column-header {
+    -fx-border-width: 0 0 1 0;
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header .label{
+    -fx-font-family: "Times New Roman";
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+}
+
+.table-view .table-row-cell {
+    -fx-border-width: 0;
+    -fx-background-color: transparent;
+    -fx-border-style: dashed;
+}
+
+.table-view .table-row-cell .text {
+    -fx-font-size: 15px;
+}
+
+.table-view .table-row-cell:selected .text{
+    -fx-background-color: steelblue;
+    -fx-fill: #b2030c;
+    -fx-font-weight: bolder;
+}
+
+.table-view .table-column{
+    -fx-alignment: center;
+    -fx-padding: 10px 0 0 0;
+    -fx-border-width: 0;
+}
+
+.table-view .scroll-bar:horizontal {
+    -fx-background-color: transparent;
+}
+
+.table-view .scroll-bar:vertical {
+    -fx-background-color: transparent;
+}
+
+.table-view .scroll-bar:horizontal .thumb,
+.table-view .scroll-bar:vertical .thumb {
+    -fx-background-insets: none;
+    -fx-background-radius: none;
+    -fx-background-color: transparent;
+}
+
+.table-view .scroll-bar .increment-arrow,
+.table-view .scroll-bar .decrement-arrow {
+    -fx-shape: " ";
+    -fx-padding: 0;
+}
+
+.menu-bar {
+    -fx-text-fill: #FFF;
+    -fx-border-width: 0;
+    -fx-background-color: -fx-primarybc;
+}
+.menu-bar .menu {
+    -fx-border-width: 0;
+    -fx-border-insets: 0;
+    -fx-border-radius: 0;
+}
+
+.menu .label {
+    -fx-text-fill: #FFF;
+    -fx-font-size: 16px;
+}
+
+.context-menu {
+    -fx-border-width: 0;
+    -fx-padding: 0;
+}
+.menu-bar .menu .menu-item {
+    -fx-padding: 0;
+    -fx-background-color: -fx-primarybc;
+    -fx-border-width: 0;
+    -fx-border-insets: 0;
+    -fx-border-radius: 0;
+}
+
+.menu-bar .menu .menu-item .button {
+    -fx-font-size: 16px;
+    -fx-font-family: "Times New Roman";
+    -fx-text-fill: -fx-primarytext;
+    -fx-border-width: 0;
+    -fx-background-color: transparent;
+}
+
+.menu-bar .menu .menu-item .button:hover {
+    -fx-background-color: #4e91fc;
+}
+
 #adminPane {
     -fx-padding: 0;
+}
+
+
+/*All label with an id#*/
+#searchP {
+    -fx-font-family: "Times New Roman";
+    -fx-font-size: 16px;
+    -fx-border-width: 0 1 1 1;
+    -fx-border-style: dashed;
+    -fx-background-color: transparent;
 }
