--- a/src/fxml/Admin.fxml
+++ b/src/fxml/Admin.fxml
@@ -7,17 +7,6 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="687.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
    <children>
-      <GridPane layoutX="367.0" layoutY="84.0" prefHeight="14.0" prefWidth="435.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <opaqueInsets>
-            <Insets left="15.0" right="15.0" />
-         </opaqueInsets>
-      </GridPane>
       <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="655.0" prefHeight="45.0" prefWidth="1137.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
@@ -35,7 +24,7 @@
       </GridPane>
       <Pane fx:id="leftPane" layoutX="5.0" layoutY="68.0" prefHeight="552.0" prefWidth="336.0" style="-fx-border-width: 0 2 2 0; -fx-border-color: red;">
          <children>
-            <Label layoutX="96.0" layoutY="35.0" style="-fx-font-size: 20px; -fx-font-family: Apple Chancery, cursive; -fx-font-weight: bold;" text="MK Restaurant " />
+            <Label fx:id="name" layoutX="96.0" layoutY="35.0" style="-fx-font-size: 20px; -fx-font-family: Apple Chancery, cursive; -fx-font-weight: bold;" text="MK Restaurant " />
             <Label layoutX="14.0" layoutY="158.0" text="Order Places" />
             <TableView layoutX="7.0" layoutY="211.0" prefHeight="326.0" prefWidth="323.0">
               <columns>
@@ -66,7 +55,10 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
+                    <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <Button fx:id="editProduct" mnemonicParsing="false" text="Product" />
+                           </graphic></MenuItem>
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Account">
@@ -78,10 +70,13 @@
                         </MenuItem>
                         <MenuItem mnemonicParsing="false">
                            <graphic>
-                              <Button mnemonicParsing="false" text="Customer" />
+                              <Button mnemonicParsing="false" text="Customer Info" />
                            </graphic>
                         </MenuItem>
-                    <MenuItem mnemonicParsing="false" />
+                    <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <Button mnemonicParsing="false" text="Employee" />
+                           </graphic></MenuItem>
                   </items>
                 </Menu>
               </menus>
