--- a/src/fxml/Account.fxml
+++ b/src/fxml/Account.fxml
@@ -29,45 +29,43 @@
                         <Label fx:id="aLabel" layoutX="36.0" layoutY="143.0" text="Address:" />
                         <Label fx:id="cLabel" layoutX="36.0" layoutY="196.0" text="City:" />
                         <Label fx:id="sLabel" layoutX="358.0" layoutY="196.0" text="State:" />
-                        <Label fx:id="zLabel" layoutX="36.0" layoutY="249.0" text="ZipCode:" />
+                        <Label fx:id="zLabel" layoutX="36.0" layoutY="249.0" text="Zip Code:" />
                         <Label fx:id="subTitle" layoutX="32.0" layoutY="303.0" prefHeight="27.0" prefWidth="455.0" text="Login Information" />
                         <Label fx:id="uLabel" layoutX="32.0" layoutY="366.0" text="Username:" />
                         <Label fx:id="pLabel" layoutX="357.0" layoutY="366.0" text="Password:" />
-                        <Label fx:id="accountID" layoutX="144.0" layoutY="45.0" text="1111111" />
-                        <Label fx:id="firstName" layoutX="158.0" layoutY="93.0" text="Mary" />
-                        <Label fx:id="lastName" layoutX="467.0" layoutY="87.0" text="Smith" />
-                        <Label fx:id="address" layoutX="133.0" layoutY="143.0" text="123 Street" />
-                        <Label fx:id="city" layoutX="101.0" layoutY="196.0" text="New York City" />
-                        <Label fx:id="state" layoutX="433.0" layoutY="196.0" text="NY" />
-                        <Label fx:id="userName" layoutX="138.0" layoutY="366.0" text="kk@12" />
-                        <Label fx:id="password" layoutX="455.0" layoutY="366.0" text="1234" />
-                        <Label fx:id="zipCode" layoutX="128.0" layoutY="249.0" text="67231" />
+                        <Label fx:id="accountID" layoutX="128.0" layoutY="45.0" text="1111111" />
+                        <Label fx:id="firstName" layoutX="125.0" layoutY="93.0" text="Mary" />
+                        <Label fx:id="lastName" layoutX="447.0" layoutY="87.0" text="Smith" />
+                        <Label fx:id="address" layoutX="107.0" layoutY="143.0" text="123 Street" />
+                        <Label fx:id="city" layoutX="80.0" layoutY="196.0" text="New York City" />
+                        <Label fx:id="state" layoutX="410.0" layoutY="196.0" text="NY" />
+                        <Label fx:id="userName" layoutX="117.0" layoutY="366.0" text="kk@12" />
+                        <Label fx:id="password" layoutX="435.0" layoutY="366.0" text="1234" />
+                        <Label fx:id="zipCode" layoutX="118.0" layoutY="249.0" text="67231" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
           <Tab fx:id="editAccount" text="Edit User Account">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0">
+              <AnchorPane fx:id="subRootTwo" minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="43.0" layoutY="43.0" text="User ID" />
-                        <TextField layoutX="43.0" layoutY="110.0" promptText="Enter last name" />
-                        <TextField layoutX="365.0" layoutY="110.0" promptText="Enter first name" />
-                        <TextField layoutX="43.0" layoutY="180.0" prefHeight="39.0" prefWidth="546.0" promptText="Enter new address" />
-                        <TextField layoutX="43.0" layoutY="248.0" promptText="Enter city" />
-                        <TextField layoutX="365.0" layoutY="248.0" promptText="Enter state" />
-                        <TextField layoutX="43.0" layoutY="325.0" promptText="Enter zip code" />
-                        <TextField layoutX="43.0" layoutY="402.0" prefHeight="39.0" prefWidth="326.0" promptText="Enter new username" />
-                        <PasswordField layoutX="43.0" layoutY="483.0" promptText="Enter password" />
-                        <PasswordField layoutX="365.0" layoutY="483.0" promptText="Conform password" />
+                        <Label fx:id="idLabel" layoutX="43.0" layoutY="95.0" text="User ID" />
+                        <TextField fx:id="updateLastName" layoutX="43.0" layoutY="133.0" prefHeight="39.0" prefWidth="270.0" promptText="Enter last name" />
+                        <TextField fx:id="updateFirstName" layoutX="365.0" layoutY="133.0" prefHeight="39.0" prefWidth="263.0" promptText="Enter first name" />
+                        <TextField fx:id="updateAddress" layoutX="43.0" layoutY="194.0" prefHeight="39.0" prefWidth="546.0" promptText="Enter new address" />
+                        <TextField fx:id="updateCity" layoutX="43.0" layoutY="260.0" prefHeight="39.0" prefWidth="278.0" promptText="Enter city" />
+                        <TextField fx:id="updateState" layoutX="365.0" layoutY="260.0" prefHeight="39.0" prefWidth="255.0" promptText="Enter state" />
+                        <TextField fx:id="updateZipCode" layoutX="43.0" layoutY="326.0" prefHeight="39.0" prefWidth="298.0" promptText="Enter zip code" />
+                        <TextField fx:id="updateUsername" layoutX="43.0" layoutY="384.0" prefHeight="39.0" prefWidth="326.0" promptText="Enter new username" />
+                        <PasswordField fx:id="updatePassword" layoutX="43.0" layoutY="448.0" prefHeight="39.0" prefWidth="271.0" promptText="Enter password" />
+                        <PasswordField fx:id="updateConform" layoutX="365.0" layoutY="448.0" prefHeight="39.0" prefWidth="265.0" promptText="Conform password" />
+                        <Button fx:id="submitUpdate" layoutX="476.0" layoutY="528.0" mnemonicParsing="false" text="Submit Update" />
+                        <Button fx:id="clearField" layoutX="264.0" layoutY="528.0" mnemonicParsing="false" text="Clear all field" />
+                        <Label fx:id="instruction" layoutX="43.0" layoutY="29.0" text="Message" />
                      </children></AnchorPane>
             </content>
           </Tab>
-            <Tab fx:id="editAddress" text="Edit Address">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0" />
-               </content>
-            </Tab>
         </tabs>
       </TabPane>
    </children>
