--- a/src/fxml/MainIndex.fxml
+++ b/src/fxml/MainIndex.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="745.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
    <children>
       <GridPane fx:id="gridPane1" layoutX="-10.0" prefHeight="40.0" prefWidth="1015.0">
@@ -54,7 +56,7 @@
             <Label fx:id="copyRight" text="copyright" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
-      <GridPane fx:id="gridPaneTopRight" layoutX="991.0" layoutY="-12.0" prefHeight="104.0" prefWidth="225.0">
+      <GridPane fx:id="gridPaneTopRight" layoutX="991.0" layoutY="-12.0" prefHeight="179.0" prefWidth="225.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
@@ -65,7 +67,8 @@
             <Pane fx:id="topPane" prefHeight="153.0" prefWidth="412.0">
                <children>
                   <Button fx:id="log" alignment="TOP_CENTER" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" text="Register / Sign In" />
-                  <Button fx:id="signOut" layoutX="17.0" layoutY="65.0" mnemonicParsing="false" text="Sign Out" />
+                  <Button fx:id="signOut" layoutX="17.0" layoutY="92.0" mnemonicParsing="false" text="Sign Out" />
+                  <Button fx:id="account" layoutX="19.0" layoutY="53.0" mnemonicParsing="false" text="Account" />
                </children>
             </Pane>
          </children>
