--- a/src/style/Account.css
+++ b/src/style/Account.css
@@ -4,6 +4,7 @@
     -fx-primarybc: #232F3E;
     -fx-secondarybc: #FFFF8D;
     -fx-primarychbc: #4e91fc;
+    -fx-primarytexts: RGB(255, 82, 83);
     -fx-primafyfamily: "Times New Roman", Times, serif;
 }
 
@@ -27,13 +28,13 @@
     -fx-background-color: transparent;
     -fx-background-insets: 0;
     -fx-border-image-width: 0;
-    -fx-pref-width: 130;
+    -fx-pref-width: 160;
     -fx-pref-height: 40px;
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
     -fx-alignment: CENTER;
-    -fx-pref-width: 130;
+    -fx-pref-width: 160;
 }
 
 .tab-pane .tab:hover {
@@ -56,20 +57,54 @@
 
 #subRoot .label{
     -fx-font-size: 16px;
+    -fx-font-family: serif, "Courier New", monospace;
+}
+
+#subRootTwo .label{
+    -fx-font-size: 18px;
+    -fx-text-fill: #000;
+    -fx-font-family: serif, "Courier New", monospace;
+}
+
+#subRootTwo .text-field {
+    -fx-font-size: 16px;
+    -fx-text-fill: #000;
+    -fx-font-family: serif, "Courier New", monospace;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-style: dashed;
+    -fx-border-color: -fx-primarybc;
+    -fx-background-color: transparent;
+}
+
+#subRootTwo .button {
+    -fx-text-fill: -fx-primarytext;
+    -fx-font-size: 17px;
     -fx-font-family: "Courier New", monospace;
+    -fx-background-color: -fx-primarybc;
+    -fx-border-width: 0;
+}
+
+#subRootTwo .button:hover {
+    -fx-background-color: -fx-secondary;
+    -fx-text-fill: -fx-primarybc;
 }
 
 #subRoot #lLabel, #subRoot #fLabel, #subRoot #aLabel,
 #subRoot #cLabel, #subRoot #sLabel, #subRoot #zLabel,
 #subRoot #uLabel, #subRoot #pLabel, #subRoot #idLabel{
     -fx-font-weight: bold;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: serif;
 }
 
 #subRoot #subTitle {
     -fx-font-weight: bold;
     -fx-border-width: 0 0 1 0;
     -fx-border-style: dashed;
+}
+
+#subRootTwo #instruction {
+    -fx-font-size: 16px;
+    -fx-text-fill: #FF1A1A;
 }
 
 #gridPaneFooter {
